MDEV-8860 Wrong result for WHERE 2016 < SOME (SELECT CAST(time_column AS DATETIME) FROM t1) MDEV-8875 Wrong metadata for MAX(CAST(time_column AS DATETIME))